tests/fail/semantics/conflicting_execution/main.kira
@Main
@Native
@Runtime
function entry() {
    return;
}
